--- a/Presentation/sample.bib
+++ b/Presentation/sample.bib
@@ -57,3 +57,8 @@
 	publisher = {Saunders},
 	year = {2013},
 }
+
+@misc{ricalca,
+  title = {Graph reader},
+  howpublished = {http://www.graphreader.com/},
+}
